# max-map-editor

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE  MANUAL.md  OPTIMIZATION-BACKLOG.md  README.md  REFACTORING-PLAYBOOK.md  RNG-GEN.md  THIRD-PARTY-LICENSES.md  TILESET-NAMING.md  UI.md  _test.ts  index.html  install.sh  node-test.loader.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts  vite.exposed.env.ts  vite.style.parser.ts
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: about.rs  autofix.rs  blit.rs  browser.rs  capture.rs  cellgrid.rs  command.rs  confirm.rs  console.rs  console_font.rs  convertpalette.rs  crt.rs  dedupetemplates.rs  deletetemplate.rs  errormodal.rs  font.rs  generator.rs  gpu.rs  grid.rs  importwrl.rs  input.rs  main.rs  matcheditor.rs  max_font.rs  menu.rs  minimap.rs  modal.rs  newfromimage.rs  newmap.rs  packlist.rs  palette.rs  palette_io.rs  palette_panel.rs  palettedelete.rs  palettename.rs  picker.rs  preferences.rs  project_render.rs  renametemplate.rs  render.rs  (+18 more)
app/src/shaders/: blit.wgsl  crt.wgsl  grid.wgsl  picker.wgsl  project.wgsl  text.wgsl  units.wgsl
app/tests/: scripts.rs
assessments/: frontend-assessment-2.md
config/: mme.ini
crates/ini/: Cargo.toml  README.md
crates/ini/src/: ini.rs  ini_section.rs  lib.rs  parse_ini.rs
crates/ini/test-files/: mod_a.ini  mod_circular.ini  mod_circular_a.ini  mod_non_ascii.ini  mod_null_id.ini  mod_root.ini
crates/json/: Cargo.toml
crates/json/src/: lib.rs
crates/map-core/: Cargo.toml
crates/map-core/examples/: extract_patterns.rs  make_stock_templates.rs
crates/map-core/src/: bake.rs  color.rs  game_palette.rs  grid.rs  image_import.rs  lib.rs  pack.rs  palette.rs  palette_convert.rs  project.rs  selection.rs  shore.rs  template.rs  worldgen.rs  wrl_import.rs
crates/map-core/src/project/: mod.rs  palette_reimport.rs  serde.rs
crates/map-core/tests/: equivalence.rs  shore_ground_truth.rs
crates/max-assets/: Cargo.toml  README.md
crates/max-assets/src/: color.rs  lib.rs
crates/tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/resources/linux/: app.desktop
crates/tauri/src/: app_settings.rs  app_setup.rs  app_state.rs  commands.rs  devtools.rs  hash.rs  lib.rs  logger.rs  main.rs  settings_json.rs  zip.rs
crates/tauri/src/commands/: image_to_wrl_command.rs  mod.rs  validate_max_path_command.rs  xlog_command.rs
crates/tauri/src/image_to_wrl/: benchmark.rs  dither.rs  log.rs  mod.rs  palette.rs  quantize_colors.rs
crates/xini/: Cargo.toml
crates/xini/src/: lib.rs
crates/xlog/: Cargo.toml
crates/xlog/src/: lib.rs
demos/webgl/map-tile-palette/: README.md  webgl.js
designs/: app-architecture.md  ui-components-organization.drawio
designs/actions/: file-actions.md  pass-editor-actions.md  tile-editor-actions.md
designs/features/: map-editor-features.md  map-features.md  pass-editor-features.md
docs/: about.html  frontend-assessment.md  index.html  license.html  styles.css
docs/designs/: design.drawio  features.drawio  ui-components-organization.drawio
docs/designs/actions/: file-actions.md
docs/scripts/: script.js
front/: index.html
front/src/: global.d.ts  main.ts
front/src/bff/: rust-api.ts
front/src/consts/: map-consts.ts  tile-consts.ts
front/src/events/: app-events.ts
front/src/state/: app-state.ts  editor-state.ts  history-state.ts
front/src/types/: map-project.d.ts  tiles.d.ts  wgl.d.ts
front/src/ui/: TODO.md
resources/: settings.ini  settings.json
resources/assets/CRATER/: info.json  tiles-data.json  tiles.data.json  tiles.match.json  tiles.pass.json  tiles.patterns.json  tiles.props.json  tiles.variants.json
resources/assets/DESERT/: info.json  palette.json  tiles-data.json  tiles.data.json  tiles.match.json  tiles.pass.json  tiles.patterns.json  (+2 more)
resources/config/: mme.ini
resources/icons/: max-map-editor.desktop
resources/internal/: palette_slots.json
resources/manual/: index.html
resources/maps/: CRATER.template.json  CRATER_1.json  CRATER_2.json  CRATER_3.json  CRATER_4.json  CRATER_5.json  CRATER_6.json  DESERT_1.json  DESERT_2.json  DESERT_3.json  DESERT_4.json  DESERT_5.json  DESERT_6.json  GREEN_1.json  GREEN_2.json  GREEN_3.json  GREEN_4.json  GREEN_5.json  GREEN_6.json  SNOW_1.json  SNOW_2.json  SNOW_3.json  SNOW_4.json  SNOW_5.json  SNOW_6.json
resources/templates/: CRATER_1.json  CRATER_3.json  CRATER_4.json  CRATER_6.json  DESERT_1.json  DESERT_2.json  DESERT_3.json  GREEN_1.json  GREEN_3.json  GREEN_5.json  GREEN_6.json  SNOW_1.json  SNOW_3.json  SNOW_4.json  SNOW_5.json  SNOW_6.json
scripts/: animate.script  console.script  context-menu.script  grid.script  menu.script  minimap.script  new-map.script  newmap-modal.script  open-switch.script  palette.script  pass-editor.script  pass-overlay.script  picker.script  project-edit.script  quit-guard.script  resize.script  save-roundtrip.script  select-template.script  shore-alt.script  shore-fix.script  shore.script  smoke.script  toolbox.script  workspace.script
src/: globals.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: HELP.md  app_state.rs  appstate.rs  commands.rs  devtools.rs  fs.rs  hash.rs  lib.rs  logger.rs  main.rs  settings_json.rs  stdio.rs  time.rs  zip.rs
src-tauri/src/image_to_wrl/: convert.rs  img.rs  mod.rs  quantize_image.rs  tiles.rs
src/consts/: map-consts.ts  wgl-consts.ts
src/events/: app-events.ts
src/lib/: rust-api.ts
src/state/: app-signals.ts  app-state.ts
src/styles/: global.style.css  index.css  index.style.css
src/types/: env.d.ts  extensions.d.ts  generic.d.ts  imports.d.ts  overwrites.d.ts  test.d.ts  tiles.d.ts  tileset.d.ts  wgl.d.ts
src/utils/: rust-api.ts
temp/: ideas.md
todo/: app-architecture.md  improvements 1.md
tools/: build-manual.mjs  fetch-testdata.sh  licenses.mjs
tools/cli/: assets-to-bin.js  compress.README.md  compress.js  concat.js  strip-water.js  wrl-to-json.js
(+738 files in other folders)
