[workspace]
resolver = "3"
members = [
	"app",
	"crates/ini",
	"crates/json",
	"crates/map-core",
	"crates/max-assets",
]

[workspace.package]
version      = "0.6.0"
edition      = "2024"
rust-version = "1.85"
authors      = ["Aneta Suns"]
license      = "MIT"
publish      = false

[workspace.dependencies]
# Internal crates
ini        = { path = "crates/ini" }
json       = { path = "crates/json" }
map-core   = { path = "crates/map-core" }
max-assets = { path = "crates/max-assets" }

# External crates - exact-pinned, versions matched to re-max's lockfile
# Text-only clipboard: default features dropped to avoid the `image` crate
# (clipboard-image support); the Wayland backend is kept.
arboard   = { version = "=3.6.1", default-features = false, features = ["wayland-data-control"] }
bytemuck  = { version = "=1.24.0", features = ["derive"] }
log       = "=0.4.28"
png       = "=0.18.0"
pollster  = "=0.4.0"
rfd       = "=0.17.2"
thiserror = "=2.0.17"
wgpu      = "=26.0.1"
winit     = "=0.30.12"

# Lint policy for the first-party crates (app, map-core). Opt in per crate
# with `[lints] workspace = true`. CI runs `cargo clippy … -- -D warnings`, so
# everything is denied *except* the lints allowed here - they conflict with the
# house style (the code favours explicit nested guards, the directional `RING`
# index loops in shore.rs, and the wide immediate-mode quad helpers). Keep this
# list short and justified, not a catch-all. The copied-in crates (ini,
# max-assets) don't opt in and aren't gated - they track their upstreams.
[workspace.lints.clippy]
collapsible_if      = "allow" # explicit nested guards read clearer here
needless_range_loop = "allow" # indexed loops mirror the direction `RING`
too_many_arguments  = "allow" # immediate-mode quad/widget helpers take many
single_match        = "allow" # `match { Ok(Some) => .., _ => {} }` suits the routers

# The document kernel does real computation (auto-shore optimization, the
# bake, composition) - optimize it even in dev builds; the app crate stays
# fast to compile and easy to debug.
[profile.dev.package.map-core]
opt-level = 2

# Release = the shipped portable binary. Thin LTO + one codegen unit for
# size/speed, symbols stripped. Overflow checks stay ON deliberately: this is
# a data-integrity tool (bake/undo correctness beats a few % of paint speed).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
overflow-checks = true
