[package]
name    = "max-map-editor"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
ini        = { workspace = true }
json       = { workspace = true }
map-core   = { workspace = true }
max-assets = { workspace = true }

arboard  = { workspace = true }
bytemuck = { workspace = true }
log      = { workspace = true }
png      = { workspace = true }
pollster = { workspace = true }
rfd      = { workspace = true }
wgpu     = { workspace = true }
winit    = { workspace = true }

[lints]
workspace = true
