[package]
name = "max-game-map-editor"
version = "0.2.0"
description = "M.A.X. Game Map Editor"
authors = ["Aneta Suns"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "max_game_map_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
lazy_static = "1.5.0"
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
zip = "4.2.0"
md5 = "0.8.0"
chrono = "0.4.41"
