[package]
name = "max-map-editor"
version = "0.3.0"
description = "M.A.X. Map Editor"
authors = ["Aneta Suns"]
edition = "2024"

[lib]
name = "max_map_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
xini = { path = "../xini" }
xlog = { path = "../xlog" }
crossbeam = "0.8"
image = "0.25"
num_cpus = "1.17"
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
